force-app/main/default/objects/Claim_Audit__c/Claim_Audit__c.object-meta.xml
<CustomObject>
    <label>Claim Audit</label>
    <nameField>
        <label>Claim Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>