force-app/main/default/objects/Claim_Audit__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>paid</fullName>
            </value>
            <value>
                <fullName>fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>