force-app/main/default/objects/Claim_Audit__c/fields/Policy_Claim__c.field-meta.xml
<CustomField>
    <fullName>Policy_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Claim</label>
    <referenceTo>Policy_Claim__c</referenceTo>
    <relationshipLabel>Claim Audit</relationshipLabel>
    <relationshipName>Claim_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>